[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/kenney_top-down-shooter/PNG/Zombie 1/zoimbie1_hold.png" type="Texture" id=1]
[ext_resource path="res://Assets/kenney_top-down-shooter/PNG/Zombie 1/zoimbie1_stand.png" type="Texture" id=2]
[ext_resource path="res://zombie.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "aggro",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 455.04

[sub_resource type="CircleShape2D" id=4]
radius = 13.0384

[node name="zombie" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 11
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "aggro"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="attack_box" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_box"]
shape = SubResource( 4 )

[node name="hit_timer" type="Timer" parent="."]
one_shot = true

[node name="stop_go_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="stop_go_timer" to="." method="_on_stop_go_timer_timeout"]
